// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project with "devDependencies" macos || linux: build-env dep snapshot 1`] = `
"# Build environment
# package:            dep@path:dep
# depspec:            dependencies(self)
# mode:               build
# envspec:            
# buildIsInProgress:  true
# includeBuildEnv:    true
# includeCurrentEnv:  false
# includeNpmBin:      false


#
# Built-in
#
export cur__etc=\\"%esyStorePath%/s/%id%/etc\\"
export cur__share=\\"%esyStorePath%/s/%id%/share\\"
export cur__toplevel=\\"%esyStorePath%/s/%id%/toplevel\\"
export cur__stublibs=\\"%esyStorePath%/s/%id%/stublibs\\"
export cur__doc=\\"%esyStorePath%/s/%id%/doc\\"
export cur__man=\\"%esyStorePath%/s/%id%/man\\"
export cur__lib=\\"%esyStorePath%/s/%id%/lib\\"
export cur__sbin=\\"%esyStorePath%/s/%id%/sbin\\"
export cur__bin=\\"%esyStorePath%/s/%id%/bin\\"
export cur__install=\\"%esyStorePath%/s/%id%\\"
export cur__target_dir=\\"%esyPrefixPath%/3/b/%id%\\"
export cur__original_root=\\"%esyPrefixPath%/source/i/dep__5d502355\\"
export cur__root=\\"%esyPrefixPath%/3/b/%id%\\"
export cur__dev=\\"false\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"dep\\"
export OCAMLFIND_CONF=\\"%esyStorePath%/p/%id%/etc/findlib.conf\\"
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;

exports[`Project with "devDependencies" macos || linux: build-env devDep snapshot 1`] = `
"# Build environment
# package:            devDep@path:devDep
# depspec:            dependencies(self)
# mode:               build
# envspec:            
# buildIsInProgress:  true
# includeBuildEnv:    true
# includeCurrentEnv:  false
# includeNpmBin:      false


#
# Built-in
#
export cur__etc=\\"%esyStorePath%/s/%id%/etc\\"
export cur__share=\\"%esyStorePath%/s/%id%/share\\"
export cur__toplevel=\\"%esyStorePath%/s/%id%/toplevel\\"
export cur__stublibs=\\"%esyStorePath%/s/%id%/stublibs\\"
export cur__doc=\\"%esyStorePath%/s/%id%/doc\\"
export cur__man=\\"%esyStorePath%/s/%id%/man\\"
export cur__lib=\\"%esyStorePath%/s/%id%/lib\\"
export cur__sbin=\\"%esyStorePath%/s/%id%/sbin\\"
export cur__bin=\\"%esyStorePath%/s/%id%/bin\\"
export cur__install=\\"%esyStorePath%/s/%id%\\"
export cur__target_dir=\\"%esyPrefixPath%/3/b/%id%\\"
export cur__original_root=\\"%esyPrefixPath%/source/i/devdep__3fd7f986\\"
export cur__root=\\"%esyPrefixPath%/3/b/%id%\\"
export cur__dev=\\"false\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"devDep\\"

#
# depOfDevDep@path:depOfDevDep@d41d8cd9
#
export CAML_LD_LIBRARY_PATH=\\"%esyStorePath%/i/%depOfDevDepId%/stublibs:%esyStorePath%/i/%depOfDevDepId%/lib/stublibs:$CAML_LD_LIBRARY_PATH\\"
export OCAMLPATH=\\"%esyStorePath%/i/%depOfDevDepId%/lib:$OCAMLPATH\\"
export MAN_PATH=\\"%esyStorePath%/i/%depOfDevDepId%/man:$MAN_PATH\\"
export PATH=\\"%esyStorePath%/i/%depOfDevDepId%/bin:$PATH\\"

#
# Built-in
#
export OCAMLFIND_CONF=\\"%esyStorePath%/p/%id%/etc/findlib.conf\\"
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;

exports[`Project with "devDependencies" macos || linux: build-env snapshot 1`] = `
"# Build environment
# package:            withDevDep@link-dev:./package.json
# depspec:            dependencies(self)+devDependencies(self)
# mode:               buildDev
# envspec:            
# buildIsInProgress:  true
# includeBuildEnv:    true
# includeCurrentEnv:  false
# includeNpmBin:      false


#
# Built-in
#
export cur__etc=\\"%projectPath%/_esy/default/store/i/%id%/etc\\"
export cur__share=\\"%projectPath%/_esy/default/store/i/%id%/share\\"
export cur__toplevel=\\"%projectPath%/_esy/default/store/i/%id%/toplevel\\"
export cur__stublibs=\\"%projectPath%/_esy/default/store/i/%id%/stublibs\\"
export cur__doc=\\"%projectPath%/_esy/default/store/i/%id%/doc\\"
export cur__man=\\"%projectPath%/_esy/default/store/i/%id%/man\\"
export cur__lib=\\"%projectPath%/_esy/default/store/i/%id%/lib\\"
export cur__sbin=\\"%projectPath%/_esy/default/store/i/%id%/sbin\\"
export cur__bin=\\"%projectPath%/_esy/default/store/i/%id%/bin\\"
export cur__install=\\"%projectPath%/_esy/default/store/i/%id%\\"
export cur__target_dir=\\"%projectPath%/_esy/default/store/b/%id%\\"
export cur__original_root=\\"%projectPath%\\"
export cur__root=\\"%projectPath%\\"
export cur__dev=\\"true\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"withDevDep\\"

#
# depOfDevDep@path:depOfDevDep@d41d8cd9
#
export CAML_LD_LIBRARY_PATH=\\"%esyStorePath%/i/%depofdevdepid%/stublibs:%esyStorePath%/i/%depofdevdepid%/lib/stublibs:$CAML_LD_LIBRARY_PATH\\"
export OCAMLPATH=\\"%esyStorePath%/i/%depofdevdepid%/lib:$OCAMLPATH\\"
export MAN_PATH=\\"%esyStorePath%/i/%depofdevdepid%/man:$MAN_PATH\\"
export PATH=\\"%esyStorePath%/i/%depofdevdepid%/bin:$PATH\\"

#
# devDep@path:devDep@d41d8cd9
#
export CAML_LD_LIBRARY_PATH=\\"%esyStorePath%/i/%devdepid%/stublibs:%esyStorePath%/i/%devdepid%/lib/stublibs:$CAML_LD_LIBRARY_PATH\\"
export OCAMLPATH=\\"%esyStorePath%/i/%devdepid%/lib:$OCAMLPATH\\"
export MAN_PATH=\\"%esyStorePath%/i/%devdepid%/man:$MAN_PATH\\"
export PATH=\\"%esyStorePath%/i/%devdepid%/bin:$PATH\\"

#
# dep@path:dep@d41d8cd9
#
export CAML_LD_LIBRARY_PATH=\\"%esyStorePath%/i/%depid%/stublibs:%esyStorePath%/i/%depid%/lib/stublibs:$CAML_LD_LIBRARY_PATH\\"
export OCAMLPATH=\\"%esyStorePath%/i/%depid%/lib:$OCAMLPATH\\"
export MAN_PATH=\\"%esyStorePath%/i/%depid%/man:$MAN_PATH\\"
export PATH=\\"%esyStorePath%/i/%depid%/bin:$PATH\\"

#
# Built-in
#
export OCAMLFIND_CONF=\\"%projectPath%/_esy/default/store/p/%id%/etc/findlib.conf\\"
export DUNE_BUILD_DIR=\\"%projectPath%/_esy/default/store/b/%id%\\"
export DUNE_STORE_ORIG_SOURCE_DIR=\\"true\\"
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;
